# EduAI

./: .env.docker  .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  rebuild.bat  rebuild.sh  tsconfig.json
.kiro/specs/education-level-selection/: design.md  requirements.md  tasks.md
Yeni klasör/backend/: README.md  pyproject.toml
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  pyproject.toml  run_backend_plan.md
backend/app/: database.py  main.py
backend/app/admin/: routes.py
backend/app/agents/: __init__.py  analysis_agent.py  base_agent.py  book_agent.py  exam_agent.py  master_agent.py  question_agent.py  youtube_agent.py
backend/app/api/: agents.py  auth.py  education.py  exam.py  guidance.py  performance.py  questions.py  subjects.py  users.py
backend/app/core/: auth.py  auth_deps.py  config.py  langchain_integration.py
backend/app/data/: ai_prompts.json  exam_question_counts.json  subject_question_distribution.json
backend/app/models/: __init__.py  book_recommendation.py  education_level.py  exam.py  performance.py  question.py  subject.py  user.py
backend/app/schemas/: __init__.py  admin.py  education_level.py  exam.py  performance.py  question.py  subject.py  user.py
backend/app/services/: ai_guidance_service.py  education_service.py  exam_service.py  memory_service.py  parallel_agent_service.py
backend/app/utils/: __init__.py  startup.py
frontend/: .dockerignore  .env.development  .env.example  .env.production  .env.staging  .prettierignore  DEPLOYMENT.md  Dockerfile  INTEGRATION_TEST_REPORT.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/nginx/: default.conf
frontend/public/: manifest.json  offline.html  robots.txt  sw.js
frontend/scripts/: analyze-bundle.js  build.js  deployment-readiness.js  health-check.js  optimize-production.js
frontend/src/: App.tsx  README.md  index.css  main.tsx
(+320 files in other folders)
